--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "sass": "^1.68.0",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4",
+    "worker-loader": "^3.0.8",
     "yup": "^1.3.2"
   },
-
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -48,14 +48,17 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+        ">0.2%",
+        "not dead",
+        "not ie 11",
+        "not chrome < 51",
+        "not safari < 10",
+        "not android < 51"
     ],
     "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+        "last 1 chrome version",
+        "last 1 firefox version",
+        "last 1 safari version"
     ]
-  }
+}
 }
